--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,14 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-        <ImageView
+        <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/banner_top_my_image_view"
             android:layout_width="64dp"
-            android:layout_height="64dp" />
+            android:layout_height="64dp"
+            android:layout_gravity="center"
+            android:src="@drawable/my_pic"
+            app:civ_border_width="0dp"
+            android:layout_marginBottom="5dp"/>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -32,7 +36,9 @@
                 android:id="@+id/banner_top_search_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@null"/>
+                android:background="@null"
+                android:padding="4dp"
+                android:hint="@string/search_message"/>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
@@ -97,7 +103,7 @@
             android:layout_centerVertical="true"
             android:layout_marginStart="60dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/msg_3" />
+            android:src="@drawable/chat_2" />
 
         <ImageView
             android:id="@+id/main_contacts_icon"
@@ -106,7 +112,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="60dp"
-            android:src="@drawable/cntcts" />
+            android:src="@drawable/profile" />
     </RelativeLayout>
 
 
