--- a/app/src/main/res/layout/recycler_view_item_chats.xml
+++ b/app/src/main/res/layout/recycler_view_item_chats.xml
@@ -15,10 +15,11 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="50dp">
 
-        <ImageView
+        <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/item_image_view"
             android:layout_width="70dp"
-            android:layout_height="70dp" />
+            android:layout_height="70dp"
+            app:civ_border_width="0dp"/>
 
     </androidx.cardview.widget.CardView>
 
