--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,58 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#8a65f1"
     android:orientation="vertical"
-    tools:context=".Chat">
+    tools:context=".ui.ChatActivity">
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_chat"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="15"
-        android:background="@drawable/rounded_corner"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:background="@drawable/rounded_2_corner"
         android:padding="20dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp" />
-
     <RelativeLayout
+        android:id="@+id/chatting_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.9"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="3dp">
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp">
 
         <EditText
             android:id="@+id/edit_text_chat_message"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_toStartOf="@+id/button_send_message"
             android:background="@drawable/custom_edit_text"
-            tools:ignore="NestedWeights"
-            android:hint="@string/text_message"
             android:gravity="center_vertical"
-            android:layout_toStartOf="@+id/button_send_message"/>
+            android:hint="@string/text_message"
+            android:padding="5dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="10dp"/>
 
         <ImageButton
             android:id="@+id/button_send_message"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
             android:background="@drawable/custom_button"
-            android:src="@drawable/send_2"
             android:foregroundGravity="center_vertical"
-            android:text="@string/send" />
+            android:src="@drawable/send_2"
+            android:text="@string/send"
+            android:paddingEnd="5dp"/>
 
     </RelativeLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
