--- a/app/src/main/res/drawable/custom_edit_text.xml
+++ b/app/src/main/res/drawable/custom_edit_text.xml
@@ -2,10 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
-            <corners android:radius="10dp"/>
-            <stroke android:color="@color/design_default_color_primary" android:width="1dp"/>
+        <shape>
+            <solid android:color="#e8e3e8"/>
+            <corners android:radius="20dp"/>
         </shape>
     </item>
 
