--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,8 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:padding="4dp"
-                android:hint="@string/search_message"/>
+                android:hint="@string/search_message"
+                android:maxLines="1"/>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
@@ -49,7 +50,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/top_banner"
         android:background="@drawable/rounded_2_corner"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -97,18 +99,17 @@
 
         <ImageView
             android:id="@+id/main_chats_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="60dp"
-            android:layout_marginTop="20dp"
             android:src="@drawable/chat_2" />
 
         <ImageView
             android:id="@+id/main_contacts_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="60dp"
