--- a/app/src/main/res/layout/recycler_view_item_chat_user.xml
+++ b/app/src/main/res/layout/recycler_view_item_chat_user.xml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/recycler_item_card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="7dp"
     android:layout_marginEnd="70dp"
     android:layout_marginBottom="7dp"
-    app:cardCornerRadius="20dp">
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/chat_text_view_message"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_alignParentStart="true"
+        android:background="@drawable/user_message_corners"
+        android:padding="7dp"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/chat_text_view_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:background="#DEDCE4"
-            android:padding="7dp"
-            android:textSize="20sp" />
-
-    </RelativeLayout>
-
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
