--- a/app/src/main/res/layout/recycler_view_item_chats.xml
+++ b/app/src/main/res/layout/recycler_view_item_chats.xml
@@ -3,25 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="2dp"
     android:background="@color/white"
     android:orientation="horizontal"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:paddingTop="7dp"
+    android:paddingBottom="7dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/image_card_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="50dp">
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/item_image_view"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            app:civ_border_width="0dp"/>
-
-    </androidx.cardview.widget.CardView>
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/item_image_view"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:civ_border_width="0dp" />
 
     <LinearLayout
         android:id="@+id/item_name_and_message_group"
@@ -29,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="110dp"
-        android:layout_toEndOf="@+id/image_card_view"
+        android:layout_toEndOf="@+id/item_image_view"
         android:orientation="vertical">
 
         <TextView
@@ -62,9 +53,9 @@
             android:layout_height="20dp"
             android:layout_gravity="center_horizontal|center_vertical"
             android:background="@drawable/round_msg_number_corner"
+            android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="15sp"
-            android:gravity="center"/>
+            android:textSize="15sp" />
 
     </LinearLayout>
 
