--- a/app/src/main/res/drawable/round_msg_number_corner.xml
+++ b/app/src/main/res/drawable/round_msg_number_corner.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="1000dp" />
-    <solid android:color="#5D3CCB"/>
+    <solid android:color="#8a65f1"/>
 
 </shape>
