--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -18,7 +18,10 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
         android:background="@drawable/rounded_2_corner"
-        android:padding="15dp">
+        android:paddingBottom="60dp"
+        android:paddingTop="15dp"
+        android:paddingRight="15dp"
+        android:paddingLeft="15dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
