--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,114 +7,26 @@
     android:background="#8a65f1"
     tools:context=".ui.MainActivity">
 
-    <LinearLayout
-        android:id="@+id/top_banner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/banner_top_my_image_view"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_gravity="center"
-            android:src="@drawable/my_pic"
-            app:civ_border_width="0dp"
-            android:layout_marginBottom="5dp"/>
+    <include layout="@layout/active_chats_toolbar"
+        android:id="@+id/active_chats_toolbar"/>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginBottom="10dp"
-            app:cardBackgroundColor="#a78bf4"
-            app:cardCornerRadius="30dp">
 
-            <EditText
-                android:id="@+id/banner_top_search_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:padding="4dp"
-                android:hint="@string/search_message"
-                android:maxLines="1"/>
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/top_of_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/top_banner"
-        android:background="@drawable/rounded_2_corner"
-        android:orientation="horizontal"
-        android:paddingTop="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:background="@drawable/round_whole_corners"
-            android:text="@string/message"
-            android:textColor="#9574f1"
-            android:textSize="20sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
-            android:layout_marginEnd="60dp"
-            android:background="@drawable/round_whole_corners"
-            android:gravity="right"
-            android:text="@string/active"
-            android:textColor="#9574f1"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_chats"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/banner_view"
-        android:layout_below="@+id/top_of_recycler_view"
-        android:background="@color/white"
-        android:paddingStart="20dp"
-        android:paddingTop="15dp"
-        android:paddingEnd="10dp">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <RelativeLayout
-        android:id="@+id/banner_view"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/layout_border"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp">
+        app:menu="@menu/bottom_menu" />
 
-        <ImageView
-            android:id="@+id/main_chats_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="60dp"
-            android:src="@drawable/chat_2" />
-
-        <ImageView
-            android:id="@+id/main_contacts_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="60dp"
-            android:src="@drawable/profile" />
-    </RelativeLayout>
-
+    <fragment
+        android:id="@+id/navHostFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/active_chats_toolbar"
+        android:layout_above="@id/bottom_navigation_view"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/my_nav" />
 
 </RelativeLayout>
