--- a/app/src/main/res/layout/recycler_view_item_chat_user.xml
+++ b/app/src/main/res/layout/recycler_view_item_chat_user.xml
@@ -9,10 +9,19 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/contact_name_in_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
+        android:textSize="15sp"
+        android:textColor="#D441C0" />
+
+    <TextView
         android:id="@+id/chat_text_view_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_below="@+id/contact_name_in_group"
         android:background="@drawable/user_message_corners"
         android:padding="7dp"
         android:textColor="@color/white"
