--- a/app/src/main/res/layout/recycler_view_item_chats.xml
+++ b/app/src/main/res/layout/recycler_view_item_chats.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,7 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="110dp"
-        android:layout_toEndOf="@+id/item_image_view"
         android:orientation="vertical">
 
         <TextView
@@ -37,10 +36,11 @@
 
 
     <LinearLayout
+        android:id="@+id/time_and_msg_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginEnd="20dp">
 
         <TextView
             android:id="@+id/item_time_text_view"
@@ -59,4 +59,14 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+    <CheckBox
+        android:id="@+id/checkbox"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:button="@null"
+        android:background="@android:color/transparent"
+        android:drawableEnd="@drawable/custom_checkbox"
+        android:layout_marginStart="5dp"
+        android:visibility="gone"/>
+
+</LinearLayout>
